@@ -16,6 +16,7 @@
 package org.ttrssreader.model.updaters;
 
 import org.ttrssreader.controllers.Data;
+import org.ttrssreader.controllers.NotInitializedException;
 import org.ttrssreader.utils.Utils;
 import android.util.Log;
 
@@ -24,7 +25,11 @@ public class StateSynchronisationUpdater implements IUpdatable {
     @Override
     public void update(Updater parent) {
         Log.i(Utils.TAG, "Reader went online, now synchronizing status of articles...");
-        Data.getInstance().synchronizeStatus();
+        try {
+            Data.getInstance().synchronizeStatus();
+        } catch (NotInitializedException e) {
+            return;
+        }
     }
     
 }
