@@ -3,11 +3,14 @@
 = Changes =
 == Version 1.22 ==
   * Added support for new API of TTRSS 1.5.8 (due January 2012)
-  * Fixed Enhancement #65: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=65 Publish with a note])
-  * Only fetching new articles now since API gives information about this since 1.5.8.
+  * Added Enhancement #65: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=65 Publish with a note])
+  * Notes are also cached if working offline, later they are automatically synchronized with the server
   * Fixed not-working "mark as unread" menu entry
   * Ignore specific SSLExceptions which often occur on bad connections
   * Added check for http status code "401 Unauthorized"
+  
+TODO:
+  * Only fetching new articles now since API gives information about this since 1.5.8.
 
 == Version 1.21 ==
   * Fixed wrong handling of Usage-options
